Fixed details box overlap issue

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   border-radius: 4px;
   box-shadow: 10px 10px 15px #111;
   line-height: 10%;
+  z-index: 100;
 }
 
 .dot {
